Class ProblemFactory tagged as deprecated